fixed off-center

--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ cursor: pointer;
 		float: left;
 		margin-right: 20px; 
 		cursor: pointer;
-		box-shadow: 1px 1px 0 4px #60C04D;
+		box-shadow: 0px 0px 0 4px #60C04D;
 
 		border-radius: 50%;
 		-webkit-border-radius: 50%;
